overflow on y fixed

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html, body {
     width: 100%;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 body{
